--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       justify-content: space-between;
       padding: 0 8px;
       pointer-events: none;        /* кликабельны только кнопки */
-      z-index: 5000;               /* выше всего контента */
+      /* z-index задаётся в styles.css единожды */
       background: transparent !important;
       border: none !important;
       box-shadow: none !important;
@@ -106,7 +106,7 @@
       position: fixed;
       right: 16px;
       bottom: calc(var(--tabbar-h) + var(--safe) + 16px);
-      z-index: 6000;               /* выше таббара и карточек */
+      /* z-index задаётся в styles.css единожды */
       width: 48px; height: 48px;
       border-radius: 14px;
       border: 1px solid var(--stroke);
@@ -286,7 +286,5 @@
 
   <!-- Иконки после монтирования (запасной вызов) -->
   <script> try { window.lucide?.createIcons?.(); } catch {} </script>
-
-  <!-- (удалён) Локальный JS для кнопки «вверх» — теперь в src/components/ScrollTop.js -->
 </body>
 </html>
