--- a/index.html
+++ b/index.html
@@ -366,14 +366,14 @@
               <div class="ps-hero__ico"><i data-lucide="camera"></i></div>
               <div class="ps-hero__text">
                 <div class="ps-hero__title">Найдём вещь по вашим фото</div>
-                <div class="ps-hero__hint">Пришлите 1–5 фото желаемой вещи — мы подберём похожие варианты и ответим в чате.</div>
+                <div class="ps-hero__hint">Пришлите 1–5 фото желаемой вещи — мы попробуем найти вещь и ответим в чате.</div>
               </div>
             </div>
 
             <ul class="ps-steps">
               <li class="ps-step">
                 <div class="ps-step-num">1</div>
-                <div class="ps-step-text">Нажмите «Написать оператору» ниже.</div>
+                <div class="ps-step-text">Нажмите «Написать оператору».</div>
               </li>
               <li class="ps-step">
                 <div class="ps-step-num">2</div>
@@ -381,7 +381,7 @@
               </li>
               <li class="ps-step">
                 <div class="ps-step-num">3</div>
-                <div class="ps-step-text">Мы ответим с подходящими позициями и ссылками на заказ.</div>
+                <div class="ps-step-text">Мы подберём подходящие позиции.</div>
               </li>
             </ul>
           </div>
