--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Fonts / styles -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
-  <!-- ⬇️ обновлённый cache-busting параметр -->
+  <!-- ⬇️ cache-busting -->
   <link rel="stylesheet" href="styles.css?v=2025-10-30-19-10" />
 
   <style>
@@ -426,7 +426,7 @@
     })();
   </script>
 
-  <!-- Главный модуль (⬇️ обновлённый cache-busting параметр) -->
+  <!-- Главный модуль (⬇️ cache-busting) -->
   <script type="module" src="src/main.js?v=2025-10-30-19-10"></script>
 
   <!-- Иконки после монтирования (запасной вызов) -->
