--- a/index.html
+++ b/index.html
@@ -35,11 +35,38 @@
   <meta name="twitter:description" content="Стильные вещи по Outlet-ценам. Смотрите каталог и заказывайте в пару кликов." />
   <meta name="twitter:image" content="assets/images/og-evlise.png" />
 
+  <!-- ЕДИНЫЙ БИЛД-ШТАМП (обновляй при каждом деплое) -->
+  <meta name="app-build" content="2025-10-30-21-10" />
+
+  <!-- Ранний само-апдейтер: срабатывает до загрузки ESM -->
+  <script>
+    (function(){
+      try{
+        var BUILD = document.querySelector('meta[name="app-build"]')?.content || 'dev';
+        var KEY   = '__app_build__';
+        var prev  = localStorage.getItem(KEY);
+
+        if (prev && prev !== BUILD){
+          var url = new URL(location.href);
+          if (url.searchParams.get('v') !== BUILD){
+            url.searchParams.set('v', BUILD);
+            localStorage.setItem(KEY, BUILD);
+            location.replace(url.toString()); // без лишней истории
+            return;
+          }
+        }
+        localStorage.setItem(KEY, BUILD);
+      }catch(e){
+        try{ location.reload(); }catch(_){}
+      }
+    })();
+  </script>
+
   <!-- Fonts / styles -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700;800&display=swap" rel="stylesheet" />
-  <!-- ⬇️ cache-busting -->
-  <link rel="stylesheet" href="styles.css?v=2025-10-30-19-10" />
+  <!-- cache-busting по тому же штампу -->
+  <link rel="stylesheet" href="styles.css?v=2025-10-30-21-10" />
 
   <style>
     /* --------- БАЗОВЫЕ ПЕРЕМЕННЫЕ (если нет в styles.css) --------- */
@@ -47,7 +74,7 @@
       --safe: env(safe-area-inset-bottom, 0px);
       --safe-top: env(safe-area-inset-top, 0px);
       --stroke: rgba(15,23,42,.14);
-      --tabbar-h: 64px;
+      --tabbar-h: 92px; /* синхронизировано со styles.css */
       --shadow: 0 10px 30px rgba(0,0,0,.18);
       --muted: #787676;
     }
@@ -426,8 +453,8 @@
     })();
   </script>
 
-  <!-- Главный модуль (⬇️ cache-busting) -->
-  <script type="module" src="src/main.js?v=2025-10-30-19-10"></script>
+  <!-- Главный модуль (тот же штамп v=) -->
+  <script type="module" src="src/main.js?v=2025-10-30-21-10"></script>
 
   <!-- Иконки после монтирования (запасной вызов) -->
   <script> try { window.lucide?.createIcons?.(); } catch {} </script>
