--- a/index.html
+++ b/index.html
@@ -202,6 +202,29 @@
 
   <!-- Lucide (пинованная версия) -->
   <script src="https://cdn.jsdelivr.net/npm/lucide@0.454.0/dist/umd/lucide.min.js" defer></script>
+
+  <script>
+(function enforceCanonical(){
+  var CANON = 'evliseoutlet.netlify.app'; // <-- здесь твой ВЫБРАННЫЙ основной хост
+  if (location.hostname !== CANON) {
+    var target = 'https://' + CANON + location.pathname + location.search + location.hash;
+    try { location.replace(target); } catch { location.href = target; }
+  }
+})();
+</script>
+<meta name="app-build" content="2025-10-30-19-10">
+<script>window.__BUILD="2025-10-30-19-10";</script>
+<script>
+(function showBuildBadge(){
+  if (location.search.includes('showbuild=1')) {
+    var d=document.createElement('div');
+    d.style.cssText='position:fixed;right:8px;bottom:8px;z-index:99999;background:#0008;color:#fff;padding:6px 10px;border-radius:10px;font:12px/1.2 system-ui';
+    d.textContent='BUILD '+(window.__BUILD||'n/a')+' @ '+location.hostname;
+    document.body.appendChild(d);
+  }
+})();
+</script>
+
 </head>
 
 <body>
